--- a/man/custom.texi
+++ b/man/custom.texi
@@ -1635,17 +1635,15 @@ The Emacs Lisp Reference Manual}.}:
 Type @kbd{C-q} followed by the key you want to bind, to insert @var{char}.
 
 Since this puts a non-@acronym{ASCII} character in the @file{.emacs},
-you should specify the proper coding system for that file.  @xref{Init
-Syntax}.  You should specify the same coding system for the file that
-you use for your keyboard.
+you should specify for that file a coding system that supports
+that character.  @xref{Init Syntax}.
 
-@strong{Warning:} if you change the keyboard encoding, or change
-from unibyte to multibyte mode, such that the code that
+@strong{Warning:} if you change the keyboard encoding, such that the code that
 @kbd{C-q} inserts becomes different, you'll need to edit the
 Lisp expression accordingly.
 
-If you bind 8-bit characters like this in your init file, you may find it
-convenient to specify that it is unibyte.  @xref{Enabling Multibyte}.
+@strong{Warning:} @kbd{C-q} will insert the wrong code if you visit
+the file @file{.emacs} in a unibyte buffer, so don't do that.
 
 @node Mouse Buttons
 @subsection Rebinding Mouse Buttons
