--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-25  Kenichi Handa  <handa@m17n.org>
+
+	* custom.texi (Non-ASCII Rebinding): Fix and simplify the
+	description for unibyte mode.
+
 2004-08-23  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* display.texi (Font Lock): Correct invalid (for hardcopy) @xref.
