--- a/man/faq.texi
+++ b/man/faq.texi
@@ -3586,45 +3586,25 @@ A list of sites mirroring @samp{ftp.gnu.org} can be found at
 @cindex Lucid Emacs
 @cindex Epoch
 
-First of all, they're both GNU Emacs.  XEmacs is just as much a later
-version of GNU Emacs as the FSF-distributed version.  This FAQ refers to
-the latest version to be distributed by the FSF as ``Emacs,'' partly
-because the XEmacs maintainers now refer to their product using the
-``XEmacs'' name, and partly because there isn't any accurate way to
-differentiate between the two without getting mired in paragraphs of
-legalese and history.
+XEmacs is a branch version of Emacs.  It was earlier called as Lucid
+Emacs, and it was based on a prerelease version of Emacs 19.  In this
+FAQ, we use the name ``Emacs'' only for the official version.
 
-XEmacs, which began life as Lucid Emacs, is based on an early version of
-Emacs 19 and Epoch, an X-aware version of Emacs 18.
-
-Emacs (i.e., the version distributed by the FSF) has a larger installed
-base and now always contains the MULE multilingual facilities.
-XEmacs can do some clever tricks with X and MS-Windows, such as
-putting arbitrary graphics in a buffer.  Similar facilities have been
-implemented for Emacs as part of a new redisplay implementation for
-Emacs 21, and are available in the latest Emacs releases.
-Emacs and XEmacs each come with
-Lisp packages that are lacking in the other; RMS says that the FSF would
-include more packages that come with XEmacs, but that the XEmacs
-maintainers don't always keep track of the authors of contributed code,
-which makes it impossible for the FSF to have certain legal papers
-signed.  (Without these legal papers, the FSF will not distribute Lisp
-packages with Emacs.)  The two versions have some
-significant differences at the Lisp programming level.
+Emacs and XEmacs each come with Lisp packages that are lacking in the
+other.  The two versions have some significant differences at the Lisp
+programming level.
 
 Many XEmacs features have found their way into recent versions of Emacs,
 and more features can be expected in the future, but there are still many
 differences between the two.
 
-The latest stable branch of XEmacs as of this writing is 21.4; you can
-get it at
-
-@uref{ftp://ftp.xemacs.org/pub/xemacs/xemacs-21.4/xemacs-21.4.12.tar.gz}
-
-More information about XEmacs, including a list of frequently asked
-questions (FAQ), is available at
-
-@uref{http://www.xemacs.org/}
+The FSF has used some of the code in XEmacs, and would like to use
+other parts, but the earlier XEmacs maintainers did not always keep
+track of the authors of contributed code, which makes it impossible
+for the FSF to get copyright papers signed for that code.  (The FSF
+requires these papers for all the code included in Emacs, aside from
+generic C support packages that are not integrated into the code of
+Emacs proper.)
 
 @node Emacs for MS-DOS, Emacs for Windows, Difference between Emacs and XEmacs, Finding Emacs and related packages
 @section Where can I get Emacs for my PC running MS-DOS?
