--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-26  Richard M. Stallman  <rms@gnu.org>
+
+	* faq.texi (Difference between Emacs and XEmacs): Rewrite.
+
 2004-08-25  Kenichi Handa  <handa@m17n.org>
 
 	* custom.texi (Non-ASCII Rebinding): Fix and simplify the
