macmenu.c (ENCODE_MENU_STRING): Added to handle multibyte strings in menu items. (single_submenu): Use ENCODE_MENU_STRING (mac_menu_show): Use ENCODE_MENU_STRING.  Reset grabbed because button release isn't passed to event loop (add_menu_item): Use SetMenuItemWithCFString

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-26  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
+
+	* macmenu.c (ENCODE_MENU_STRING): Added to handle multibyte
+	strings in menu items.
+	(single_submenu): Use ENCODE_MENU_STRING
+	(mac_menu_show): Use ENCODE_MENU_STRING.  Reset grabbed because
+	button release isn't passed to event loop
+	(add_menu_item): Use SetMenuItemWithCFString
+
 2004-08-26  Steven Tamm  <steventamm@mac.com>
 
 	* fileio.c (Fread_file_name): Call x_file_dialog on carbon on
