--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-27  Richard M. Stallman  <rms@gnu.org>
+
+	* faq.texi (Difference between Emacs and XEmacs): 
+	Explain not to contrast XEmacs with GNU Emacs.
+
 2004-08-26  Richard M. Stallman  <rms@gnu.org>
 
 	* faq.texi (Difference between Emacs and XEmacs): Rewrite.
