--- a/man/misc.texi
+++ b/man/misc.texi
@@ -1,5 +1,5 @@
 @c This is part of the Emacs manual.
-@c Copyright (C) 1985, 86, 87, 93, 94, 95, 97, 2000, 2001
+@c Copyright (C) 1985, 86, 87, 93, 94, 95, 97, 2000, 2001, 2004
 @c   Free Software Foundation, Inc.
 @c See file emacs.texi for copying conditions.
 @iftex
@@ -14,6 +14,11 @@ an Emacs session for later resumption, emulating other editors, and
 various diversions and amusements.
 
 @end iftex
+
+@ifnottex
+@raisesections
+@end ifnottex
+
 @node Gnus, Shell, Calendar/Diary, Top
 @section Gnus
 @cindex Gnus
@@ -1264,7 +1269,7 @@ automatically when you finish with them.
 @end menu
 
 @node Invoking emacsclient,, Emacs Server, Emacs Server
-@section Invoking @code{emacsclient}
+@subsection Invoking @code{emacsclient}
 
   To run the @code{emacsclient} program, specify file names as arguments,
 and optionally line numbers as well.  Do it like this:
@@ -2447,6 +2452,10 @@ Likewise, @kbd{M-x snake} provides an implementation of Snake.
 @findex zone
 The command @kbd{M-x zone} plays games with the display when Emacs is
 idle.
+
+@ifnottex
+@lowersections
+@end ifnottex
 
 @ignore
    arch-tag: 8f094220-c0d5-4e9e-af7d-3e0da8187474
