--- a/man/commands.texi
+++ b/man/commands.texi
@@ -10,6 +10,10 @@ of @dfn{keys} and @dfn{commands}, which are fundamental for understanding
 how Emacs interprets your keyboard and mouse input.
 @end iftex
 
+@ifnottex
+@raisesections
+@end ifnottex
+
 @node User Input, Keys, Screen, Top
 @section Kinds of User Input
 @cindex input with the keyboard
@@ -265,6 +269,10 @@ with codes 128 through 255 can also appear in multibyte buffers.
   If you disable multibyte characters, then you can use only one
 alphabet of non-@acronym{ASCII} characters, but they all fit in one byte.  They
 use codes 0200 through 0377.  @xref{Single-Byte Character Support}.
+
+@ifnottex
+@lowersections
+@end ifnottex
 
 @ignore
    arch-tag: 9be43eef-d1f4-4d03-a916-c741ea713a45
