--- a/man/entering.texi
+++ b/man/entering.texi
@@ -59,6 +59,10 @@ Emacs running, you can use the @command{emacsclient} program to open a
 file in the already running Emacs.  @xref{Emacs Server}, for more
 information on editing files with Emacs from other programs.
 
+@ifnottex
+@raisesections
+@end ifnottex
+
 @node Exiting, Basic, Entering Emacs, Top
 @section Exiting Emacs
 @cindex exiting
@@ -149,6 +153,10 @@ inspired by the use of @kbd{C-z} and @kbd{C-c} on several operating
 systems as the characters for stopping or killing a program, but that is
 their only relationship with the operating system.  You can customize
 these keys to run any commands of your choice (@pxref{Keymaps}).
+
+@ifnottex
+@lowersections
+@end ifnottex
 
 @ignore
    arch-tag: df798d8b-f253-4113-b585-f528f078a944
