--- a/man/doclicense.texi
+++ b/man/doclicense.texi
@@ -1,6 +1,5 @@
 @c -*-texinfo-*-
-@node GNU Free Documentation License, Intro, Copying, Top
-
+@node GNU Free Documentation License, Command Arguments, Copying, Top
 @appendix GNU Free Documentation License
 @center Version 1.1, March 2000
 
